--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
   <body>
     <div class="navbar">
       <nav>
-        <a href="logo" class="logo">Simple header</a>
         <img width="35" height="35" src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg" alt="" />
+        <a href="logo" class="logo">Simple header</a>
         <ul>
 
           <li><a href="#" class="active">Home</li>
-          <li><a href="#" class="">features</a></li>
-          <li><a href="#" class="">pricing</a></li>
+          <li><a href="#" class="">Features</a></li>
+          <li><a href="#" class="">Pricing</a></li>
           <li><a href="#" class="">FAQs</a></li>
-          <li><a href="#">about</a></li>
-          
+          <li><a href="#">about</a></li>         
         </ul>
       </nav>
     </div>
