--- a/index.html
+++ b/index.html
@@ -10,15 +10,32 @@
   <body>
     <div class="navbar">
       <nav>
-        <img width="35" height="35" src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg" alt="" />
-        <a href="logo" class="logo">Simple header</a>
+        <a href="#" class="logo">
+        <img width="35" height="35" src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo-black.svg" > Simple header
+        </a>
         <ul>
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">FEatures</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </nav>
+    </div>
 
-          <li><a href="#" class="active">Home</li>
-          <li><a href="#" class="">Features</a></li>
-          <li><a href="#" class="">Pricing</a></li>
-          <li><a href="#" class="">FAQs</a></li>
-          <li><a href="#">about</a></li>         
+    <br>
+
+    <div class="navbar navbar-inverse">
+      <nav>
+        <a href="#" class="logo">
+        <img width="35" height="35" src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo-black.svg" > Simple header
+        </a>
+        <ul>
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">FEatures</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">About</a></li>
         </ul>
       </nav>
     </div>
